--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,13 @@ server {
 
     charset utf-8;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+   location / {
+    try_files $uri @rewriteapp;
+}
+
+location @rewriteapp {
+    rewrite ^(.*)$ /index.php$1 last;
+}
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
